how do we stop the overflow (underflow?) from blog categories into code & biz?

--- a/sass/custom/_socmed.scss
+++ b/sass/custom/_socmed.scss
@@ -1,7 +1,7 @@
 /* SOCIAL ICONS - GENERAL */
 .social { list-style:none; margin:30px auto; width:232px; }
 .social li { display:inline; float:left; background-repeat:no-repeat; }
-.social li a { display:block; width:32px; height:32px; padding-right:10px; position:relative; text-decoration:none; }
+.social li a { display:block; width:32px; height:48px; padding-right:10px; position:relative; text-decoration:none; }
 .social li a strong { font-weight:normal; position:absolute; left:20px; top:-1px; color:#fff; padding:3px; z-index:9999;
  text-shadow:1px 1px 0 rgba(0, 0, 0, 0.75); background-color:rgba(0, 0, 0, 0.7);
  -moz-border-radius:3px; -moz-box-shadow: 0 0 5px rgba(0, 0, 0, 0.5); -webkit-border-radius:3px; -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.5); border-radius:3px; box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
